// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  className="mt-2 mb-2 row"
>
  <div
    className="col-8"
  >
    <select
      className="form-control"
      onChange={[Function]}
      value=""
    >
      <option>
        &lt;None&gt;
      </option>
    </select>
  </div>
  <div
    className="col-4"
  >
    <button
      className="btn-postcreation btn-addtag form btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Click here to Add!
    </button>
  </div>
</div>
`;

exports[`matches snapshot 2`] = `
<div
  className="mt-2 mb-2 row"
>
  <div
    className="col-12"
  >
    <select
      className="form-control"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      >
        &lt;None&gt;
      </option>
    </select>
  </div>
</div>
`;

exports[`matches snapshot 3`] = `
<div
  className="mt-2 mb-2 row"
>
  <div
    className="col-4"
  >
    <button
      className="btn-selection btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      All
    </button>
  </div>
  <div
    className="d-flex justify-content-end col-4"
  >
    <p
      className="text-post sub"
    >
      Currently viewing "All":
    </p>
  </div>
  <div
    className="col-4"
  >
    <select
      className="form-control"
      onChange={[Function]}
      value=""
    >
      <option
        value="All"
      >
        All
      </option>
    </select>
  </div>
</div>
`;
